Avoid saving extra register for IPInt JS->Wasm wrappers. https://bugs.webkit.org/show_bug.cgi?id=274043

Reviewed by NOBODY (OOPS!).

Adding this register to the pinned register set causes a bunch of places
to save it. We should just spill it inside the JS->WASM interpreted entry thunk.

* Source/JavaScriptCore/jit/RegisterSet.cpp:
(JSC::RegisterSetBuilder::wasmPinnedRegisters):
* Source/JavaScriptCore/llint/WebAssembly.asm:
* Source/JavaScriptCore/runtime/OptionsList.h:
* Source/JavaScriptCore/wasm/WasmCallee.cpp:
(JSC::Wasm::JSEntrypointInterpreterCallee::calleeSaveRegistersImpl):
* Source/JavaScriptCore/wasm/WasmLLIntPlan.cpp:
(JSC::Wasm::LLIntPlan::makeInterpretedJSToWasmCallee):