Source/JavaScriptCore/llint/WebAssembly.asm
@@ -604,17 +604,29 @@ op(js_to_wasm_wrapper_entry, macro ()
 
     const AccumulatorTag = invalidGPR # Only used for JSVALUE32_64
 
+    # any callee saves used here would also have to be saved by the JS->WASM thunk,
+    # since exceptions cannot tell if an interpreted callee had a replacementCallee installed
+    # when the stack frame was created.
+    # We should just restore extra callee-saves before calling.
+
 if ARM64 or ARM64E or ARMv7
-    const CP = ws3 # Callee prologue (jump target) pointer
+    const MPC = t8
+    const CalleeExecutableAddress = ws3 # Callee prologue (jump target) pointer
     const Accumulator = ws0
     const Scratch = ws1
     const Scratch2 = ws2
+
+    const MPCSpill = -0x28
 else
+    const MPC = metadataTable
     const Accumulator = csr2
     const Scratch = ws1
+
+    const MPCCSRSlot = -0x20
     const AccumulatorCSRSlot = -0x28
-    const AccumulatorSpill = -0x30
-    const CP = -0x38
+    const MPCSpill = -0x30
+    const AccumulatorSpill = -0x38
+    const CalleeExecutableAddress = -0x40
 end
 
     macro clobberVolatileRegisters()
@@ -640,14 +652,13 @@ end
             emit "movz x5, #0xBAD"
             emit "movz x6, #0xBAD"
             emit "movz x7, #0xBAD"
-            emit "movz x8, #0xBAD"
         end
     end
 
     clobberVolatileRegisters()
 
 if ARM64 or ARM64E or ARMv7
-    const JSEntrypointInterpreterCalleeSaveSpaceStackAligned = (4 * SlotSize + StackAlignment - 1) & ~StackAlignmentMask
+    const JSEntrypointInterpreterCalleeSaveSpaceStackAligned = (6 * SlotSize + StackAlignment - 1) & ~StackAlignmentMask
 else
     const JSEntrypointInterpreterCalleeSaveSpaceStackAligned = (8 * SlotSize + StackAlignment - 1) & ~StackAlignmentMask
 end
@@ -655,20 +666,23 @@ end
     macro saveJSEntrypointInterpreterRegisters()
         subp JSEntrypointInterpreterCalleeSaveSpaceStackAligned, sp
         if ARM64 or ARM64E
-            storepairq boundsCheckingSize, metadataTable, -16[cfr]
-            storepairq wasmInstance, memoryBase, -32[cfr]
+            storepairq memoryBase, boundsCheckingSize, -16[cfr]
+            storepairq ws0, wasmInstance, -32[cfr]
+            # These are just for us to spill things
+            # MPCSpill
         elsif X86_64
             # These must match the wasmToJS thunk, since the unwinder won't be able to tell the difference between us and them.
             # See calleeSaveRegistersImpl
-            storep metadataTable, -0x8[cfr]
-            storep boundsCheckingSize, -0x10[cfr]
-            storep memoryBase, -0x18[cfr]
-            storep wasmInstance, -0x20[cfr]
+            storep boundsCheckingSize, -0x8[cfr]
+            storep memoryBase, -0x10[cfr]
+            storep wasmInstance, -0x18[cfr]
             # This gets restored before call too, since it doesn't get saved/restored by the wasmToJS thunk
             storep Accumulator, AccumulatorCSRSlot[cfr]
+            storep MPC, MPCCSRSlot[cfr]
             # These are just for us to spill things
             # AccumulatorSpill
-            # CP
+            # MPCSpill
+            # CalleeExecutableAddress
         else
             error
         end
@@ -676,13 +690,13 @@ end
 
     macro restoreJSEntrypointInterpreterRegisters()
         if ARM64 or ARM64E
-            loadpairq -16[cfr], boundsCheckingSize, metadataTable
-            loadpairq -32[cfr], wasmInstance, memoryBase
+            loadpairq -16[cfr], memoryBase, boundsCheckingSize
+            loadpairq -32[cfr], ws0, wasmInstance
         elsif X86_64
-            loadp -0x8[cfr], metadataTable
-            loadp -0x10[cfr], boundsCheckingSize
-            loadp -0x18[cfr], memoryBase
-            loadp -0x20[cfr], wasmInstance
+            loadp -0x8[cfr], boundsCheckingSize
+            loadp -0x10[cfr], memoryBase
+            loadp -0x18[cfr], wasmInstance
+            loadp MPCCSRSlot[cfr], MPC
             loadp AccumulatorCSRSlot[cfr], Accumulator
         else
             error
@@ -734,11 +748,11 @@ end
 
     # Callee saves are saved, so now we can use our prefered registers
     # and free up the argument registers (t* and wa* overlap on some platforms)
-    move t1, metadataTable
+    move t1, MPC
 if ARM64 or ARM64E or ARMv7
-    move t2, CP
+    move t2, CalleeExecutableAddress
 else
-    storeq t2, CP[cfr]
+    storeq t2, CalleeExecutableAddress[cfr]
 end
 
 if JSVALUE64
@@ -754,13 +768,13 @@ end
     const OpcodeSizeShift = 5 # 8 instructions * 4 bytes per instruction
 
     macro advance()
-        loadb [metadataTable], Scratch
-        addp 1, metadataTable
+        loadb [MPC], Scratch
+        addp 1, MPC
     end
 
     macro advanceSigned()
-        loadbsq [metadataTable], Scratch
-        addp 1, metadataTable
+        loadbsq [MPC], Scratch
+        addp 1, MPC
     end
 
     macro idispatch()
@@ -948,12 +962,15 @@ opcodesEnd()
     idispatch()
 
 .call:
+    storeq MPC, MPCSpill[cfr]
 if ARM64 or ARM64E or ARMv7
-    call CP, LLIntToWasmEntryPtrTag
+    call CalleeExecutableAddress, LLIntToWasmEntryPtrTag
 else
+    loadq MPCCSRSlot[cfr], MPC
     loadq AccumulatorCSRSlot[cfr], Accumulator
-    call CP[cfr]
+    call CalleeExecutableAddress[cfr]
 end
+    loadq MPCSpill[cfr], MPC
     clobberVolatileRegisters()
     clobberArgumentOnlyRegisters()
     idispatch()
